<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_art"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.medved.mymenuapp.TopLevelActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/coffee_shop_name"
        android:textColor="@color/colorMyBrown"
        android:textSize="@dimen/app_name_text"
        android:textStyle="italic|bold"/>

    <Button
        android:id="@+id/btnFood"
        android:layout_width="@dimen/top_level_btn_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:background="@drawable/btn_green"
        android:text="@string/food"
        android:textColor="@color/colorMyBrown"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnBeers"
        android:layout_width="@dimen/top_level_btn_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnFood"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_white"
        android:text="@string/beers"
        android:textColor="@color/colorMyBrown"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnCoffee"
        android:layout_width="@dimen/top_level_btn_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnFood"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btnBeers"
        android:background="@drawable/btn_green"
        android:text="@string/coffee"
        android:textColor="@color/colorMyBrown"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnDesserts"
        android:layout_width="@dimen/top_level_btn_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCoffee"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/btnBeers"
        android:background="@drawable/btn_white"
        android:text="@string/desserts"
        android:textColor="@color/colorMyBrown"
        android:textStyle="bold"/>

</RelativeLayout>
