<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="#cc3300"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#F2F2C0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialogTitleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/order_confirmation"
            android:textAlignment="center"
            android:textColor="#cc3300"
            android:textSize="28sp"
            android:textStyle="italic|bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:background="#cc3300"/>

        <TextView
            android:id="@+id/dialogTotalPriceTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textAlignment="center"
            android:textColor="#cc3300"
            android:textSize="20sp"
            android:textStyle="italic|bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="Please enter \nyour name below"
                android:textColor="#cc3300"
                android:textSize="15sp"
                android:textStyle="italic|bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:text="@string/table_number"
                android:textColor="#cc3300"
                android:textSize="15sp"
                android:textStyle="italic|bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/dialogCustomerNameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#fff"
                android:inputType="textCapSentences"/>

            <Spinner
                android:id="@+id/dialogSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:background="#fff"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialogReturnBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_green"
                android:text="@string/dialog_back"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/dialogSendBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_green"
                android:text="@string/dialog_send"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>